@@ -1,5 +1,9 @@
 Revision history for Perl extension Win32::Monitoring::Session.
 
+Win32-Monitoring-Session-0.02, Wed 2009-07-23
+---------------------------------------------
+- Fixed Documentation
+
 Win32-Monitoring-Session-0.01, Wed 2008-08-27
 ---------------------------------------------
 - initial version
